--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx eleventy --serve",
-    "dev:tailwind": "tailwindcss -i ./style/tailwind.css -o ./_site/output.css --watch",
-    "build": "npx eleventy"
+    "start": "npm-run-all -p dev:*",
+    "build": "run-s build:*",
+    "dev:11ty": "eleventy --serve",
+    "dev:css": "tailwindcss -i style/tailwind.css -o _site/output.css --watch --postcss",
+    "build:11ty": "eleventy",
+    "build:css": "tailwindcss -i style/tailwind.css -o _site/assets/css/tailwind.css --postcss"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +17,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "autoprefixer": "^10.4.19",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38"
   },
   "dependencies": {
     "cssnano": "^7.0.1"
